// Copyright 2022 Prysmatic Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

package ethereum.builder;

import "proto/eth/ext/options.proto";
import "proto/engine/v1/execution_engine.proto";

option csharp_namespace = "Ethereum.Builder";
option go_package = "github.com/prysmaticlabs/prysm/v4/proto/builder;builder";
option java_multiple_files = true;
option java_outer_classname = "BuilderProto";
option java_package = "org.ethereum.builder";
option php_namespace = "Ethereum\\Builder";

message BuilderPayloadAttributes {
	uint64 timestamp              = 1;
	bytes prev_randao             = 2 [(ethereum.eth.ext.ssz_size) = "32"];
	uint64 slot 				  = 3 [(ethereum.eth.ext.cast_type) = "github.com/prysmaticlabs/prysm/v4/consensus-types/primitives.Slot"];
	bytes block_hash        	  = 4 [(ethereum.eth.ext.ssz_size) = "32"];
}

message BuilderPayloadAttributesV2 {
	uint64 timestamp              						= 1;
	bytes prev_randao             						= 2 [(ethereum.eth.ext.ssz_size) = "32"];
	uint64 slot 				  						= 3 [(ethereum.eth.ext.cast_type) = "github.com/prysmaticlabs/prysm/v4/consensus-types/primitives.Slot"];
	bytes block_hash        	  						= 4 [(ethereum.eth.ext.ssz_size) = "32"];
	repeated ethereum.engine.v1.Withdrawal withdrawals 	= 5 [(ethereum.eth.ext.ssz_max) = "withdrawal.size"]; // New in Capella.
}